[project]
name = "delivery-ai-env"
version = "0.1.0"
description = "AI Delivery Optimization"
requires-python = ">=3.8"

dependencies = [
    "flask",
    "openenv>=0.2.0",
    "openai"
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
